# flake-explorer

./: .gitignore  .octocov.rust.yml  .octocov.yml  CHANGELOG.md  Cargo.toml  README.md  biome.json  build.rs  bunfig.toml  flake-explorer.ts  flake.nix  package.json  package.nix  tsconfig.json  typedoc.json
.github/: dependabot.yml
app/: App.svelte  css.d.ts  main.ts
docs/: README.md  architecture.md  build-and-infra.md  cli.md  data-schema.md  extraction-pipeline.md  frontend.md  glossary.md  rust-port.html  rust-port.md  testing.md
rust/: Cargo.toml  README.md  build.rs  package.nix
rust/src/: cache.rs  drive.rs  export.rs  git.rs  highlight.rs  lib.rs  main.rs  manifest.rs  options.rs  package.rs  page.rs  pathref.rs  reverse_deps.rs  run_nix.rs  scan.rs  schema.rs  serve.rs
rust/tests/: cli.rs  degrade.rs  export_html.rs  mini_flake.rs  serve_http.rs
rust/tests/common/: mod.rs
scripts/: build-docs.ts  build-npm.ts  bundle-app.ts  docs-mermaid-client.ts  release.ts
src/: build-app.ts  cache.rs  drive.rs  export.rs  export.ts  git.rs  highlight.rs  lib.rs  licenses.ts  main.rs  manifest.rs  options.rs  package.rs  page.rs  pathref.rs  pathref.ts  reverse_deps.rs  run_nix.rs  scan.rs  schema.rs  schema.ts  serve.rs  serve.ts
test/: app.test.ts  breadcrumb.test.ts  cache.test.ts  cli-help.test.ts  color.test.ts  config-summary.test.ts  data.test.ts  diff-view.test.ts  diff.test.ts  export.test.ts  file-detail.test.ts  file-list.test.ts  fingerprint.test.ts  git.test.ts  hash.test.ts  header.test.ts  helpers.ts  highlight.test.ts  imports.test.ts  (+39 more)
(+85 files in other folders)
